added type parameter for stac/mosaicjson api to make sure put ms token only for MS stac (#903)
